# wallpaper.rs

./: Cargo.toml  readme.md
src/: error.rs  lib.rs  macos.rs  unsupported.rs  windows.rs
src/linux/: gnome.rs  lxde.rs  mod.rs
